@@ -22,6 +22,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.speedment.example</groupId>
         <artifactId>example-parent</artifactId>
@@ -32,24 +33,38 @@
     <packaging>jar</packaging> 
     
     <name>Speedment - Example - Custom TypeMapper</name>
-    <description>
-        Custom TypeMapper
-    </description>
+    <description>Custom TypeMapper</description>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+    <build>
+        <plugins>
+
+            <!--https://stackoverflow.com/questions/50451220/maven-dependency-module-not-found-->
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <compilerArgument>-Xlint:all</compilerArgument>
+                    <showWarnings>true</showWarnings>
+                    <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+
+                <configuration>
+                    <useFile>false</useFile>
+                    <trimStackTrace>false</trimStackTrace>
+                    <argLine>--add-opens custom.typemapper/com.speedment.example.typemapper=ALL-UNNAMED</argLine>
+                </configuration>
+
+            </plugin>
+
+        </plugins>
+    </build>
 
     <dependencies>
-<!--        <dependency>
-            <groupId>com.speedment</groupId>
-            <artifactId>generator</artifactId>
-            <version>${speedment.version}</version>
-            <type>pom</type>
-        </dependency>-->
-
         <dependency>
             <groupId>com.speedment.runtime</groupId>
             <artifactId>runtime-typemapper</artifactId>
